--- a/frontend/styles/layouts/page.css
+++ b/frontend/styles/layouts/page.css
@@ -5,6 +5,8 @@
     align-content: center;
     vertical-align: middle;
 
+    box-sizing: border-box;
+
     border-radius: 10px;
     clear: both;
 
@@ -23,7 +25,6 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    padding: 0 10px;
 
 }
 
