--- a/frontend/styles/kawaii.css
+++ b/frontend/styles/kawaii.css
@@ -8,6 +8,7 @@
 @import url("./layouts/popup-overlay.css");
 
 @import url("./components/table.css");
+@import url("./components/image.css");
 @import url("./components/link.css");
 @import url("./components/input.css");
 @import url("./components/text-formating.css");
