--- a/frontend/styles/components/input.css
+++ b/frontend/styles/components/input.css
@@ -1,5 +1,5 @@
 input,
-button {
+button, textarea,select {
     background-color: var(--bg-shade1);
     border-radius: 6px;
     border: none;
@@ -7,14 +7,20 @@ button {
     padding: 4px;
     color: var(--font-color);
     cursor: pointer;
-    margin: 10px 5px;
+    margin: 10px;
 }
 
 button {
-    padding: 4px 10px;
+    padding: 5px 10px;
+
 }
 
-input{
-    width: 100%;
+input, textarea, select{
+    width: calc(100% - 20px);
     max-width: 250px;
+    text-align: left;
+}
+
+textarea{
+    align-content: start;
 }
