--- a/frontend/styles/components/link.css
+++ b/frontend/styles/components/link.css
@@ -7,7 +7,7 @@ a {
 
 a:hover {
     color: #ff9393;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     text-shadow: 0px 0px 3px rgb(255, 75, 75);
     cursor: pointer;
 }
