--- a/frontend/styles/kawaii.css
+++ b/frontend/styles/kawaii.css
@@ -2,7 +2,7 @@
 @import url("./config/size.css");
 
 @import url("./common/background.css");
-@import url("./common/spacing.css");
+@import url("./common/border-spacing.css");
 
 @import url("./layouts/page.css");
 @import url("./layouts/popup-overlay.css");
